# cpp-gpio

./: .gitignore  .gitmodules  CMakeLists.txt
include/: GPIO.h
src/: GPIO.cpp
src/desktop/: GPIO.cpp
src/raspi/: GPIO.cpp
